Issue #2046, add specific dev-math support for align cnxml attribute

--- a/css/ccap-developmental-math.css
+++ b/css/ccap-developmental-math.css
@@ -4885,6 +4885,15 @@ div.book div.chapter div.figure:not(.labeled).unnumbered > .caption:not(.labeled
 div.book div.appendix div.figure:not(.labeled).unnumbered > .caption:not(.labeled)::before {
   display: none !important;
 }
+div.table table td.text-align-left {
+  text-align: left;
+}
+div.table table td.text-align-center {
+  text-align: center;
+}
+div.table table td.text-align-right {
+  text-align: right;
+}
 div[class="note"] div.table table th {
   background-color: #D7562C;
 }
