--- a/css/refactor/developmental-math-skeleton.less
+++ b/css/refactor/developmental-math-skeleton.less
@@ -2,6 +2,12 @@
 // This software is subject to the provisions of the GNU AFFERO GENERAL PUBLIC LICENSE Version 3.0 (AGPL).
 // See LICENSE.txt for details.
 
+div.table table td {
+  &.text-align-left { text-align: left; }
+  &.text-align-center { text-align: center; }
+  &.text-align-right { text-align: right; }
+}
+
 div[class="note"] {
   div.table {
     table {
